--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
     body { font-family: 'Poppins', sans-serif; }
-    .video-card:hover { transform: translateY(-4px); }
+    .video-card:hover { transform: translateY(-4px); box-shadow: 0 10px 25px -5px rgba(0,0,0,0.1); }
     .category-card:hover {
       border-color: #3b82f6;
       background-color: #eff6ff;
@@ -26,7 +26,7 @@
         </div>
         <h1 class="text-xl font-bold text-slate-800">e-Athlete</h1>
       </div>
-      <button onclick="document.getElementById('uploadModal').classList.remove('hidden')"
+      <button onclick="openUploadModal()"
               class="bg-gradient-to-r from-amber-500 to-amber-600 text-white px-5 py-2 rounded-full font-medium hover:shadow-md transition">
         📤 Muat Naik
       </button>
@@ -72,7 +72,7 @@
   <section class="max-w-7xl mx-auto px-4 pb-16">
     <h2 class="text-2xl font-bold text-slate-800 mb-6">Video Terkini</h2>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-      <div class="video-card bg-white rounded-2xl overflow-hidden shadow-sm border border-gray-100">
+      <div class="video-card bg-white rounded-2xl overflow-hidden border border-gray-200">
         <div class="bg-gray-100 aspect-video flex items-center justify-center">
           <span class="text-gray-500 text-sm">[Thumbnail]</span>
         </div>
@@ -101,9 +101,7 @@
       <div class="p-6 border-b">
         <div class="flex justify-between items-center">
           <h3 class="text-xl font-bold text-slate-800">Muat Naik Video Anda</h3>
-          <button onclick="document.getElementById('uploadModal').classList.add('hidden')" class="text-gray-500 hover:text-gray-700">
-            ✕
-          </button>
+          <button onclick="closeUploadModal()" class="text-gray-500 hover:text-gray-700">✕</button>
         </div>
         <p class="text-sm text-slate-600 mt-1">Kongsi ilmu olahraga & dapatkan merit!</p>
       </div>
@@ -113,8 +111,7 @@
           <label class="block text-sm font-medium text-slate-700 mb-1">Nama Pelajar *</label>
           <select id="studentName" required
                   class="w-full border border-gray-300 rounded-lg px-4 py-2.5 focus:outline-none focus:ring-2 focus:ring-blue-500">
-            <option value="">-- Pilih nama anda --</option>
-            <!-- Akan diisi oleh JS -->
+            <option value="">-- Sedang memuatkan senarai... --</option>
           </select>
         </div>
 
@@ -162,8 +159,7 @@
         </div>
 
         <div class="flex justify-end space-x-3 pt-2">
-          <button type="button"
-                  onclick="document.getElementById('uploadModal').classList.add('hidden')"
+          <button type="button" onclick="closeUploadModal()"
                   class="px-4 py-2 text-slate-700 hover:bg-gray-100 rounded-lg">
             Batal
           </button>
@@ -177,44 +173,42 @@
   </div>
 
   <script>
-    // 📥 Data pelajar dari Google Sheet (anda perlu isi secara manual atau guna API)
-    // Sebagai permulaan, ambil dari sheet secara manual
-    // Gantikan dengan data sebenar dari sheet anda
-    const STUDENT_DATA = [
-      { id: "G001", name: "NURUL NAJWA BT MD ROSLI", kelas: "MPU3411-A" },
-      { id: "G002", name: "MUHAMMAD HAIKAL BIN MOHD ZAID", kelas: "MPU3411-A" },
-      { id: "G003", name: "NUR SYAFIQAH BT ABDULLAH", kelas: "MPU3411-A" },
-      // ... TAMBAH SEMUA 300+ NAMA DI SINI
-      // Format: { id: "No_Giliran", name: "Nama_Penuh", kelas: "Kelas" }
-    ];
+    const SCRIPT_URL = "https://script.google.com/macros/s/AKfycby7kIs6fMFHhqSJ3eqNEOo8jONvHOJeaWdQuo9boEtuzY6tUAEDhxOC2LifCSVAMb2o/exec";
 
-    // Isi dropdown
-    const select = document.getElementById('studentName');
-    const studentIdInput = document.getElementById('studentId');
-    const kelasInput = document.getElementById('kelas');
+    // Muat senarai pelajar
+    async function loadStudents() {
+      try {
+        const res = await fetch(`${SCRIPT_URL}?action=getStudents`);
+        const students = await res.json();
+        const select = document.getElementById('studentName');
+        select.innerHTML = '<option value="">-- Pilih nama anda --</option>';
+        students.forEach(s => {
+          const opt = document.createElement('option');
+          opt.value = JSON.stringify(s);
+          opt.textContent = s.name;
+          select.appendChild(opt);
+        });
+      } catch (err) {
+        console.error("Gagal muat senarai pelajar:", err);
+        document.getElementById('studentName').innerHTML = '<option value="">Ralat: Gagal muat senarai</option>';
+      }
+    }
 
-    STUDENT_DATA.forEach(student => {
-      const option = document.createElement('option');
-      option.value = JSON.stringify(student);
-      option.textContent = student.name;
-      select.appendChild(option);
-    });
-
-    select.addEventListener('change', (e) => {
+    // Isi medan automatik
+    document.getElementById('studentName').addEventListener('change', (e) => {
       if (e.target.value) {
         const student = JSON.parse(e.target.value);
-        studentIdInput.value = student.id;
-        kelasInput.value = student.kelas;
+        document.getElementById('studentId').value = student.id;
+        document.getElementById('kelas').value = student.kelas;
       } else {
-        studentIdInput.value = '';
-        kelasInput.value = '';
+        document.getElementById('studentId').value = '';
+        document.getElementById('kelas').value = '';
       }
     });
 
-    // 📤 Hantar ke Google Apps Script
+    // Hantar borang
     document.getElementById('uploadForm').addEventListener('submit', async (e) => {
       e.preventDefault();
-
       const selected = JSON.parse(document.getElementById('studentName').value);
       const data = {
         student_id: selected.id,
@@ -223,35 +217,42 @@
         category: document.getElementById('category').value,
         title: document.getElementById('title').value,
         description: document.getElementById('description').value,
-        video_url: document.getElementById('videoUrl').value
+        videoUrl: document.getElementById('videoUrl').value
       };
 
-      // 🔗 GANTIKAN DENGAN URL WEB APP ANDA
-      const SCRIPT_URL = "https://script.google.com/macros/s/AKfycby7kIs6fMFHhqSJ3eqNEOo8jONvHOJeaWdQuo9boEtuzY6tUAEDhxOC2LifCSVAMb2o/execc";
-
       try {
-        const response = await fetch(SCRIPT_URL, {
+        const res = await fetch(SCRIPT_URL, {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify(data)
         });
-
-        const result = await response.json();
-
+        const result = await res.json();
         if (result.success) {
           alert("✅ Video berjaya dihantar! Tunggu kelulusan admin.");
-          document.getElementById('uploadModal').classList.add('hidden');
+          closeUploadModal();
           document.getElementById('uploadForm').reset();
-          studentIdInput.value = '';
-          kelasInput.value = '';
+          document.getElementById('studentId').value = '';
+          document.getElementById('kelas').value = '';
         } else {
           alert("❌ Ralat: " + (result.error || "Tidak diketahui"));
         }
       } catch (error) {
-        alert("⚠️ Gagal sambung ke server. Sila cuba lagi.");
+        alert("⚠️ Gagal sambung ke pelayan. Sila cuba lagi.");
         console.error(error);
       }
     });
+
+    function openUploadModal() {
+      document.getElementById('uploadModal').classList.remove('hidden');
+      loadStudents(); // Muat semula senarai setiap kali buka
+    }
+
+    function closeUploadModal() {
+      document.getElementById('uploadModal').classList.add('hidden');
+    }
+
+    // Muat senarai pertama kali (opsyenal)
+    // loadStudents();
   </script>
 
 </body>
