Update description in index.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <section class="bg-gradient-to-br from-blue-900 to-indigo-800 text-white text-center py-16 px-4">
     <h1 class="text-4xl md:text-5xl font-bold mb-4">e-Athlete</h1>
     <p class="text-lg max-w-2xl mx-auto opacity-90">
-      Platform pembelajaran oleh pelajar universiti — kongsi video olahraga, dapatkan merit, jadi atlet ilmu.
+      Platform pembelajaran oleh pelajar PPSIMP — MPU3411 Kokurikulum Olahraga.
     </p>
   </section>
 
