--- a/index.html
+++ b/index.html
@@ -1,258 +1,56 @@
-<!DOCTYPE html>
-<html lang="ms">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>e-Athlete – Kongsi Ilmu, Dapatkan Merit</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <style>
-    body { font-family: 'Poppins', sans-serif; }
-    .video-card:hover {
-      transform: translateY(-4px);
-      box-shadow: 0 10px 25px -5px rgba(0,0,0,0.1);
+<!-- Video Grid (Dinamik) -->
+<section class="max-w-7xl mx-auto px-4 pb-16">
+  <div class="flex justify-between items-center mb-6">
+    <h2 class="text-2xl font-bold text-slate-800">Video Diluluskan</h2>
+  </div>
+  <div id="approvedVideos" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+    <!-- Video akan dimuat di sini -->
+    <div class="text-center py-8 text-slate-500">Memuat video...</div>
+  </div>
+</section>
+
+<script>
+// Muat video diluluskan
+async function loadApprovedVideos() {
+  try {
+    const res = await fetch(`${SCRIPT_URL}?action=getApprovedVideos`);
+    const videos = await res.json();
+    const container = document.getElementById('approvedVideos');
+    
+    if (videos.length === 0) {
+      container.innerHTML = '<p class="col-span-full text-center text-slate-500">Tiada video diluluskan lagi.</p>';
+      return;
     }
-    .category-card:hover {
-      border-color: #3b82f6;
-      background-color: #eff6ff;
-    }
-  </style>
-</head>
-<body class="bg-gray-50">
 
-  <!-- Header -->
-  <header class="sticky top-0 z-50 bg-white/90 backdrop-blur-sm shadow-sm">
-    <div class="max-w-7xl mx-auto px-4 py-3 flex justify-between items-center">
-      <div class="flex items-center space-x-2">
-        <div class="w-10 h-10 rounded-xl bg-blue-700 flex items-center justify-center">
-          <span class="text-white font-bold text-lg">eA</span>
-        </div>
-        <h1 class="text-xl font-bold text-slate-800">e-Athlete</h1>
-      </div>
-      <button onclick="openUploadModal()"
-              class="bg-gradient-to-r from-amber-500 to-amber-600 text-white px-5 py-2 rounded-full font-medium hover:shadow-md transition">
-        📤 Muat Naik
-      </button>
-    </div>
-  </header>
-
-  <!-- Hero -->
-  <section class="bg-gradient-to-br from-blue-900 to-indigo-800 text-white text-center py-16 px-4">
-    <h1 class="text-4xl md:text-5xl font-bold mb-4">e-Athlete</h1>
-    <p class="text-lg max-w-2xl mx-auto opacity-90">
-      Platform pembelajaran oleh pelajar universiti — kongsi video olahraga, dapatkan merit, jadi atlet ilmu.
-    </p>
-  </section>
-
-  <!-- Kategori -->
-  <section class="max-w-7xl mx-auto px-4 py-12">
-    <h2 class="text-2xl font-bold text-slate-800 mb-6">Kategori Topik</h2>
-    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-5">
-      <div class="category-card border border-gray-200 rounded-xl p-5 cursor-pointer transition">
-        <div class="w-12 h-12 bg-blue-100 rounded-lg flex items-center justify-center mb-3">🏃</div>
-        <h3 class="font-semibold text-slate-800">Pengenalan Olahraga</h3>
-      </div>
-      <div class="category-card border border-gray-200 rounded-xl p-5 cursor-pointer transition">
-        <div class="w-12 h-12 bg-amber-100 rounded-lg flex items-center justify-center mb-3">📋</div>
-        <h3 class="font-semibold text-slate-800">Kepegawaian Olahraga</h3>
-      </div>
-      <div class="category-card border border-gray-200 rounded-xl p-5 cursor-pointer transition">
-        <div class="w-12 h-12 bg-green-100 rounded-lg flex items-center justify-center mb-3">🏁</div>
-        <h3 class="font-semibold text-slate-800">Kemahiran Acara Balapan</h3>
-      </div>
-      <div class="category-card border border-gray-200 rounded-xl p-5 cursor-pointer transition">
-        <div class="w-12 h-12 bg-purple-100 rounded-lg flex items-center justify-center mb-3">🏅</div>
-        <h3 class="font-semibold text-slate-800">Kemahiran Acara Padang</h3>
-      </div>
-      <div class="category-card border border-gray-200 rounded-xl p-5 cursor-pointer transition">
-        <div class="w-12 h-12 bg-red-100 rounded-lg flex items-center justify-center mb-3">🔧</div>
-        <h3 class="font-semibold text-slate-800">Penyediaan Trek dan Sektor</h3>
-      </div>
-    </div>
-  </section>
-
-  <!-- Video Grid (Placeholder) -->
-  <section class="max-w-7xl mx-auto px-4 pb-16">
-    <h2 class="text-2xl font-bold text-slate-800 mb-6">Video Terkini</h2>
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+    container.innerHTML = videos.map(v => `
       <div class="video-card bg-white rounded-2xl overflow-hidden border border-gray-200">
         <div class="bg-gray-100 aspect-video flex items-center justify-center">
-          <span class="text-gray-500 text-sm">[Thumbnail]</span>
+          <span class="text-gray-500 text-sm">[YouTube]</span>
         </div>
         <div class="p-4">
           <span class="inline-block bg-blue-50 text-blue-700 text-xs px-2 py-0.5 rounded mb-2">
-            Acara Balapan
+            ${v.category}
           </span>
           <h3 class="font-semibold text-slate-800 line-clamp-2">
-            Teknik Lari Pecut – Fasa Pemecutan
+            ${v.title}
           </h3>
-          <p class="text-sm text-slate-600 mt-1">Ali Rahman • MPU3411-A</p>
+          <p class="text-sm text-slate-600 mt-1">${v.student_name} • ${v.kelas}</p>
           <div class="flex justify-between items-center mt-4">
             <div class="flex items-center text-amber-600">
-              <span class="text-sm font-medium">+12 merit</span>
+              <span class="text-sm font-medium">+${v.merit} merit</span>
             </div>
-            <span class="text-xs text-slate-400">3 hari lalu</span>
+            <span class="text-xs text-slate-400">${new Date(v.timestamp).toLocaleDateString('ms-MY')}</span>
           </div>
         </div>
       </div>
-    </div>
-  </section>
+    `).join('');
+  } catch (err) {
+    console.error("Gagal muat video:", err);
+    document.getElementById('approvedVideos').innerHTML = 
+      '<p class="col-span-full text-center text-red-500">Gagal memuat video.</p>';
+  }
+}
 
-  <!-- Modal Muat Naik -->
-  <div id="uploadModal" class="hidden fixed inset-0 bg-black/50 flex items-center justify-center z-50 p-4">
-    <div class="bg-white rounded-2xl max-w-2xl w-full max-h-[90vh] overflow-y-auto">
-      <div class="p-6 border-b">
-        <div class="flex justify-between items-center">
-          <h3 class="text-xl font-bold text-slate-800">Muat Naik Video Anda</h3>
-          <button onclick="closeUploadModal()" class="text-gray-500 hover:text-gray-700">✕</button>
-        </div>
-        <p class="text-sm text-slate-600 mt-1">Kongsi ilmu olahraga & dapatkan merit!</p>
-      </div>
-
-      <form id="uploadForm" class="p-6 space-y-5">
-        <div>
-          <label class="block text-sm font-medium text-slate-700 mb-1">Nama Pelajar *</label>
-          <select id="studentName" required
-                  class="w-full border border-gray-300 rounded-lg px-4 py-2.5 focus:outline-none focus:ring-2 focus:ring-blue-500">
-            <option value="">-- Sedang memuatkan senarai... --</option>
-          </select>
-        </div>
-
-        <!-- Papar nama & kelas selepas pilih -->
-        <div id="selectedInfo" class="hidden bg-blue-50 p-4 rounded-lg border border-blue-200">
-          <p class="text-sm text-slate-700">
-            <span class="font-medium">Nama:</span> <span id="previewName">-</span><br>
-            <span class="font-medium">Kelas:</span> <span id="previewClass">-</span><br>
-            <span class="font-medium">No. Giliran:</span> <span id="previewId">-</span>
-          </p>
-        </div>
-
-        <div>
-          <label class="block text-sm font-medium text-slate-700 mb-1">Kategori *</label>
-          <select id="category" required
-                  class="w-full border border-gray-300 rounded-lg px-4 py-2.5 focus:outline-none focus:ring-2 focus:ring-blue-500">
-            <option value="">-- Pilih kategori --</option>
-            <option value="Pengenalan Olahraga">Pengenalan Olahraga</option>
-            <option value="Kepegawaian Olahraga">Kepegawaian Olahraga</option>
-            <option value="Kemahiran Acara Balapan">Kemahiran Acara Balapan</option>
-            <option value="Kemahiran Acara Padang">Kemahiran Acara Padang</option>
-            <option value="Penyediaan Trek dan Sektor">Penyediaan Trek dan Sektor</option>
-          </select>
-        </div>
-
-        <div>
-          <label class="block text-sm font-medium text-slate-700 mb-1">Tajuk Video *</label>
-          <input type="text" id="title" required placeholder="Contoh: Teknik Lompat Jauh Asas"
-                 class="w-full border border-gray-300 rounded-lg px-4 py-2.5 focus:outline-none focus:ring-2 focus:ring-blue-500">
-        </div>
-
-        <div>
-          <label class="block text-sm font-medium text-slate-700 mb-1">Penerangan</label>
-          <textarea id="description" rows="3" placeholder="Terangkan kandungan video anda..."
-                    class="w-full border border-gray-300 rounded-lg px-4 py-2.5 focus:outline-none focus:ring-2 focus:ring-blue-500"></textarea>
-        </div>
-
-        <div>
-          <label class="block text-sm font-medium text-slate-700 mb-1">Link Video (YouTube/Vimeo/Drive) *</label>
-          <input type="url" id="videoUrl" required placeholder="https://youtube.com/..."
-                 class="w-full border border-gray-300 rounded-lg px-4 py-2.5 focus:outline-none focus:ring-2 focus:ring-blue-500">
-        </div>
-
-        <div class="flex justify-end space-x-3 pt-2">
-          <button type="button" onclick="closeUploadModal()"
-                  class="px-4 py-2 text-slate-700 hover:bg-gray-100 rounded-lg">
-            Batal
-          </button>
-          <button type="submit"
-                  class="bg-blue-600 hover:bg-blue-700 text-white px-5 py-2 rounded-lg font-medium">
-            Hantar
-          </button>
-        </div>
-      </form>
-    </div>
-  </div>
-
-  <script>
-    // URL Google Apps Script anda
-    const SCRIPT_URL = "https://script.google.com/macros/s/AKfycby7kIs6fMFHhqSJ3eqNEOo8jONvHOJeaWdQuo9boEtuzY6tUAEDhxOC2LifCSVAMb2o/exec";
-
-    // Muat senarai pelajar dari Google Sheets
-    async function loadStudents() {
-      try {
-        const res = await fetch(`${SCRIPT_URL}?action=getStudents`);
-        const students = await res.json();
-        const select = document.getElementById('studentName');
-        select.innerHTML = '<option value="">-- Pilih nama anda --</option>';
-        students.forEach(s => {
-          const opt = document.createElement('option');
-          opt.value = JSON.stringify(s);
-          opt.textContent = s.name;
-          select.appendChild(opt);
-        });
-      } catch (err) {
-        console.error("Ralat muat senarai pelajar:", err);
-        alert("Gagal muat senarai pelajar. Sila cuba lagi.");
-      }
-    }
-
-    // Papar info pelajar selepas pilih
-    document.getElementById('studentName').addEventListener('change', (e) => {
-      const infoDiv = document.getElementById('selectedInfo');
-      if (e.target.value) {
-        const student = JSON.parse(e.target.value);
-        document.getElementById('previewName').textContent = student.name;
-        document.getElementById('previewClass').textContent = student.kelas;
-        document.getElementById('previewId').textContent = student.id;
-        infoDiv.classList.remove('hidden');
-      } else {
-        infoDiv.classList.add('hidden');
-      }
-    });
-
-    // Hantar borang
-    document.getElementById('uploadForm').addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const selected = JSON.parse(document.getElementById('studentName').value);
-      const data = {
-        student_id: selected.id,       // No_Giliran
-        student_name: selected.name,
-        kelas: selected.kelas,
-        category: document.getElementById('category').value,
-        title: document.getElementById('title').value,
-        description: document.getElementById('description').value,
-        videoUrl: document.getElementById('videoUrl').value
-      };
-
-      try {
-        const res = await fetch(SCRIPT_URL, {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify(data)
-        });
-        const result = await res.json();
-        if (result.success) {
-          alert("✅ Video berjaya dihantar! Tunggu kelulusan admin.");
-          closeUploadModal();
-          document.getElementById('uploadForm').reset();
-          document.getElementById('selectedInfo').classList.add('hidden');
-        } else {
-          alert("❌ Ralat: " + (result.error || "Tidak diketahui"));
-        }
-      } catch (error) {
-        alert("⚠️ Gagal sambung ke pelayan. Sila cuba lagi.");
-        console.error(error);
-      }
-    });
-
-    function openUploadModal() {
-      document.getElementById('uploadModal').classList.remove('hidden');
-      loadStudents(); // Muat semula setiap kali modal dibuka
-    }
-
-    function closeUploadModal() {
-      document.getElementById('uploadModal').classList.add('hidden');
-    }
-  </script>
-
-</body>
-</html>
+// Panggil semasa halaman dimuat
+document.addEventListener('DOMContentLoaded', loadApprovedVideos);
+</script>
