--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         // ============================================
         // ⚠️ GANTIKAN URL API DI BAWAH (WAJIB) ⚠️
         // ============================================
-        const WEB_APP_URL = "MASUKKAN_URL_GOOGLE_APPS_SCRIPT_ANDA_DI_SINI"; 
+        const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbzkKFRpVW0lVab9TGj9Z3xcUBsdk68o32BQ13Z_QR_lc-q-F7YpPxHC29J2XPtc0lAK/exec"; 
 
         function bukaModal() { document.getElementById('uploadModal').style.display = 'flex'; }
         function tutupModal() { document.getElementById('uploadModal').style.display = 'none'; }
